--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-xl-6 col-lg-12 col-md-12">
-                        <div class="row">
+                        <div class="row first-row">
                             <div class="col-lg-4 col-md-6 col-sm-6">
                                 <div class="single-brand">
                                     <img src="./img/brands/logo1.png" alt="brand-1">
@@ -177,12 +177,13 @@
                                 </h2>
                             </div>
                             <div class="d-flex flex-row flex-wrap">
-                                <span><i class="far fa-envelope-open"></i></span>
+                                <span><i class="far fa-envelope-open fa-3x px-3"></i></span>
                                 <div class="call-now">
                                     <a href="#" class="text-uppercase h4 font-roboto">Contact Now</a>
                                     <span class="font-roboto py-2">abhinav.dev2k14@gmail.com</span>
                                 </div>
                             </div>
+                            <div class="ng-panel"></div>
                         </div>
                     </div>
                 </div>
